13_network/multi-cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: multitool-cache
  labels:
    app: multitool-cache
spec:
  replicas: 3
  selector:
    matchLabels:
      app: multitool-cache
  template:
    metadata:
      labels:
        app: multitool-cache
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
