13_network/service-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: multitool-back
  namespace: app
spec:
  selector:
    app: multitool-back
  ports:
    - name: multitool-back
      protocol: TCP
      port: 80
