13_network/service-cache.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: multitool-cache
spec:
  selector:
    app: multitool-cache
  ports:
    - name: multitool-cache
      protocol: TCP
      port: 80
