13_network/service-fr.yaml
apiVersion: v1
kind: Service
metadata:
  name: multitool-front
  namespace: app
spec:
  selector:
    app: multitool-front
  ports:
    - name: multitool-front
      protocol: TCP
      port: 80
