13_network/network-policy-ingress-allow-back-to-cache.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-back-to-cache
spec: 
  podSelector: 
    matchLabels:
      app: multitool-cache
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: multitool-back
  policyTypes:
  - Ingress
