13_network/network-policy-ingress-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-deny-all
spec: 
  podSelector: {}
  policyTypes:
  - Ingress
